testsuite/tests/rep-poly/UnliftedNewtypesLevityBinder.stderr

UnliftedNewtypesLevityBinder.hs:15:7: error:
    • Unsaturated use of a representation-polymorphic newtype constructor.
      The first argument of ‘IdentC’
      does not have a fixed runtime representation.
      Its type is:
        a :: TYPE r
    • In the expression: IdentC
      In an equation for ‘bad’: bad = IdentC
